arabic new json after conformation

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -1,150 +1,150 @@
 {
-  "sign-in": "تسجيل الدخول للبقاء على اتصال.",
-  "logout": "تسجيل خروج",
+  "sign-in": "تسجيل الدخول ",
+  "logout": "تسجيل الخروج",
   "-------------ManagerData--------": "-------------ManagerData--------",
   "managers": "المديرين",
-  "add-manager": "مدير الإعلانات",
+  "add-manager": "إضافة مدير ",
   "user-name": "اسم المستخدم",
   "email": "بريد إلكتروني",
-  "mobile-no": "رقم المحمول.",
-  "action": "فعل",
-  "previous": "سابق",
+  "mobile-no": "رقم الجوال.",
+  "action": "اجراء",
+  "previous": "السابق",
   "next": "التالي",
   "add-new-manager": "إضافة مدير جديد",
   "name": "اسم",
   "enter-your-name": "أدخل أسمك",
-  "phone-number": "رقم التليفون",
+  "phone-number": "رقم الهاتف",
   "password": "كلمة المرور",
   "confirm-password": "تأكيد كلمة المرور",
-  "submit": "يُقدِّم",
-  "cancel": "يلغي",
+  "submit": "تقديم",
+  "cancel": "الغاء",
   "first-name-is-required": "الإسم الأول مطلوب",
-  "password-is-required": "كلمة المرور مطلوبة",
-  "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
-  "delete-manager": "هل تريد حذف هذا المدير؟ ",
-  "confirm-delete-button": "نعم أنا متأكد",
+  "password-is-required": "مطلوب كلمة المرور ",
+  "confirm-password-is-required": "مطلوب تأكيد كلمة المرور ",
+  "delete-manager": " حذف المدير؟ ",
+  "confirm-delete-button": "زر تاكيد الحذف",
   "-------------MediaData--------": "-------------MediaData--------",
-  "all-media": "جميع وسائل الإعلام",
+  "all-media": "جميع الوسائط",
   "upload-images": "تحميل الصور",
-  "payment-history": "تاريخ الدفع",
+  "payment-history": "سجل الدفع",
   "basic": "أساسي",
   "year": "سنة",
   "month": "شهر",
-  "status": "حالة",
-  "amount": "كمية",
+  "status": "الحالة",
+  "amount": "المبلغ",
   "start-date": "تاريخ البدء",
-  "plan": "يخطط",
-  "end-date": "تاريخ الانتهاء",
-  "per-year": "كل سنة",
-  "per-month": "كل شهر",
-  "delete": "يمسح",
+  "plan": "خطة",
+  "end-date": "تاريخ الإنتهاء",
+  "per-year": "سنويا",
+  "per-month": "شهريا",
+  "delete": "حذف",
 
   "-------------DashBoardData--------": "-------------DashBoardData--------",
 
-  "good-afternoon": "مساء الخير",
+  "good-afternoon": "نهارك سعيد",
   "good-morning": "صباح الخير",
   "good-evening": "مساء الخير",
   "menu-items": "عناصر القائمة",
   "view-all": "عرض الكل",
   "subscription-plan": "خطة الاشتراك",
   "view-details": "عرض التفاصيل",
-  "owner": "مالك",
+  "owner": "المالك",
   "basic": "أساسي",
   "start-date": "تاريخ البدء",
   "end-date": "تاريخ الانتهاء",
-  "more": "أكثر",
+  "more": "المزيد",
   "managers": "المديرين",
   "user-name": "اسم المستخدم",
   "e-mail": "بريد إلكتروني",
-  "assigned-to": "مخصص ل",
+  "assigned-to": "تخصيص ل",
   "logout": "تسجيل خروج",
   "download-now": "التحميل الان",
 
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
-  "good-afternoon": "مساء الخير",
-  "restaurants": "مطاعم",
+  "good-afternoon": "نهارك سعيد",
+  "restaurants": "المطاعم",
   "restaurant-name": "اسم المطعم",
-  "name": "اسم",
-  "email": "بريد إلكتروني",
-  "mobile-no.": "رقم المحمول.",
-  "generated-link": "الرابط الذي تم إنشاؤه",
-  "action": "فعل",
-  "previous": "سابق",
+  "name": "الاسم",
+  "email": "البريد الإلكتروني",
+  "mobile-no.": "رقم الجوال.",
+  "generated-link": "الرابط الذي تم إنشاؤه ",
+  "action": "إجراء",
+  "previous": "السابق",
   "next": "التالي",
   "new-customer": "عميل جديد",
   "enter-restaurant-name": " أدخل اسم المطعم",
   "owner-name": "اسم المالك",
   "enter-owner-name": "أدخل اسم المالك",
   "enter-your-email": "أدخل بريدك الإلكتروني",
-  "phone-number": "رقم التليفون",
-  "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
+  "phone-number": "رقم الهاتف",
+  "shop-no-Building-optional": "رقم المحل /المبنى (إختياري)",
   "enter-your-shop-no": "أدخل رقم متجرك",
-  "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
+  "area-street-name-Optional": "اسم المنطقة/الشارع (إختياري)",
   "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
   "town-city-name": "اسم البلدة/المدينة",
-  "landmark-optional": "معلم معروف (خياري)",
+  "landmark-optional": "معلم بارز (إختياري)",
   "pincode": "الرمز السري",
-  "state": "ولاية",
-  "country": "دولة",
-  "description": "وصف",
+  "state": "الولاية",
+  "country": "الدولة",
+  "description": "الوصف",
   "type-here": "أكتب هنا",
   "create-lead": "إنشاء الرصاص",
-  "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "on-board-and-create-password": "اعداد وإنشاء كلمة المرور",
   "restaurant-name-is-required": "اسم المطعم مطلوب",
   "name-is-required": "مطلوب اسم",
   "city-name-is-required": "اسم المدينة مطلوب",
   "pincode-is-required": "مطلوب الرمز السري",
-  "state-is-required": "الدولة مطلوبة",
+  "state-is-required": "الولاية مطلوبة",
   "country-is-required": "الدولة مطلوبة",
 
   "-------------CategoriesData--------": "-------------CategoriesData--------",
 
-  "items": "أغراض",
+  "items": "اصناف",
   "menu-categories": "فئات القائمة",
-  "edit": "يحرر",
-  "delete": "يمسح",
-  "reorder": "إعادة الترتيب",
+  "edit": "تحرير",
+  "delete": "حذف",
+  "reorder": "إعادة الطلب",
   "bestseller": "الأكثر مبيعًا",
   "upload-menu": "تحميل القائمة",
   "add-menu": "إضافة القائمة",
   "add-categories": "إضافة فئات",
   "download-sample": "تنزيل العينة",
-  "more": "أكثر",
+  "more": "المزيد",
   "edit-category": "تحرير الفئة",
   "category-name": "اسم التصنيف",
-  "upload-image": "تحميل الصورة (اختياري)",
-  "upload": "رفع",
-  "cancel": "يلغي",
-  "submit": "يُقدِّم",
+  "upload-image": "تحميل الصورة",
+  "upload": "تحميل",
+  "cancel": "إلغاء",
+  "submit": "تقديم",
   "delete-category-confirmation-message": "هل تريد حذف هذه الفئة؟",
-  "confirm-delete-button": "نعم أنا متأكد",
-  "delete-menu-item-confirmation-message": "هل تريد حذف عنصر القائمة هذا؟",
-  "reorder-categories": "إعادة ترتيب الفئات",
+  "confirm-delete-button": "زر تاكيد الحذف",
+  "delete-menu-item-confirmation-message": "هل تريد حذف صنف القائمة هذا؟",
+  "reorder-categories": "إعادة طلب الفئات",
   "back": "خلف",
-  "save": "يحفظ",
+  "save": "حفظ",
   "enter-your-name": "أدخل أسمك",
   "please-create-category": "الرجاء إنشاء الفئة",
-  "edit-menu-item": "تحرير عنصر القائمة",
-  "name": "اسم",
-  "enter-your-item-name": "أدخل اسم العنصر الخاص بك",
-  "please-enter-item": "الرجاء إدخال العنصر",
-  "item-price": "سعر السلعة",
+  "edit-menu-item": "تحرير صنف القائمة",
+  "name": "الاسم",
+  "enter-your-item-name": "أدخل اسم الصنف الخاص بك",
+  "please-enter-item": "الرجاء إدخال الصنف",
+  "item-price": "سعر الصنف",
   "enter-the-amount": "أدخل المبلغ",
   "please-enter-price": "الرجاء إدخال السعر",
-  "calories": "سعرات حرارية",
+  "calories": "السعرات الحرارية",
   "category": "فئة",
-  "item-type": "نوع العنصر",
-  "please-select-item-type": "الرجاء تحديد نوع العنصر .....",
-  "description": "وصف (اختياري)",
+  "item-type": "نوع الصنف",
+  "please-select-item-type": "الرجاء تحديد نوع الصنف .....",
+  "description": "الوصف (اختياري)",
   "please-enter-description": "الرجاء إدخال الوصف",
   "enter-your-description": "أدخل الوصف الخاص بك",
-  "add-menu-item": "إضافة عنصر القائمة",
-  "please-enter-item-name": "الرجاء إدخال اسم العنصر",
+  "add-menu-item": "إضافة صنف القائمة",
+  "please-enter-item-name": "الرجاء إدخال اسم الصنف",
   "please-enter-calories": "الرجاء إدخال السعرات الحرارية",
   "please-select-category": "الرجاء تحديد الفئة .....",
   "type-here": "أكتب هنا",
   "add-category": "إضافة فئة",
-  "please-enter-item-type": "الرجاء إدخال نوع العنصر",
+  "please-enter-item-type": "الرجاء إدخال نوع الصنف",
 
   "explore-our-pricing-plans": "استكشف خطط التسعير لدينا",
   "per": "لكل",
@@ -152,13 +152,13 @@
 
   "-------------LeadsData--------": "-------------LeadsData--------",
 
-  "leads": "يؤدي",
+  "leads": "عملاء محتملين",
   "restaurant-name": "مطعم اسم",
   "name": "اسم",
-  "mobile-no.": "رقم المحمول.",
+  "mobile-no.": "رقم الجوال.",
   "email": "بريد إلكتروني",
-  "action": "فعل",
-  "previous": "سابق",
+  "action": "الاجراء",
+  "previous": "السابق",
   "next": "التالي",
   "1": "١",
   "2": "٢",
@@ -169,34 +169,34 @@
   "view-more": "عرض المزيد",
   "owner-name": "اسم المالك",
   "new-customer": "عميل جديد",
-  "phone-number": "رقم التليفون",
-  "shop-no-optional": "متجر رقم. (خياري)",
+  "phone-number": "رقم الهاتف",
+  "shop-no-optional": "رقم المتجر . (إختياري)",
   "street-name": "اسم الشارع",
   "city-name": "اسم المدينة",
-  "landmark-optional": "معلم (اختياري)",
+  "landmark-optional": "معلم بارز(اختياري)",
   "area-street-name": "اسم المنطقة/الشارع (اختياري)",
   "pincode": "الرمز السري",
-  "state": "ولاية",
-  "country": "دولة",
-  "description": "وصف",
-  "onboarding": "الإعداد",
+  "state": "الولاية",
+  "country": "الدولة",
+  "description": "الوصف",
+  "onboarding": "التأهيل",
   "password": "كلمة المرور",
   "confirm-password": "تأكيد كلمة المرور",
-  "submit": "يُقدِّم",
-  "onboard-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "submit": "تقديم",
+  "onboard-and-create-password": "التأهيل وإنشاء كلمة المرور",
   "restaurant-name-is-required": "اسم المطعم مطلوب",
   "shop-no-is-required": "رقم المحل مطلوب",
   "street-name-is-required": "اسم الشارع مطلوب",
   "City-name-is-required": "اسم المدينة مطلوب",
-  "landmark-is-required": "المعلم مطلوب",
+  "landmark-is-required": "مطلوب معلم بارز ",
   "pincode-is-required": "مطلوب الرمز السري",
-  "state-is-required": "الدولة مطلوبة",
+  "state-is-required": "الولاية مطلوبة",
   "country-is-required": "الدولة مطلوبة",
   "description-is-required": "الوصف مطلوب",
   "enter-your-name": "أدخل أسمك",
   "enter-your-shop-no": "أدخل رقم متجرك",
   "enter-your-street-name": "أدخل اسم الشارع الخاص بك",
-  "nearby-landmark": "معلم قريب",
+  "nearby-landmark": "معلم بارز قريب",
   "type-here": "أكتب هنا...",
   "password-is-required": "كلمة المرور مطلوبة",
   "confirm-password-is-required": "تأكيد كلمة المرور مطلوب",
@@ -204,47 +204,47 @@
   "enter-owner-name": "أدخل اسم المالك",
   "enter-your-email": "أدخل بريدك الإلكتروني",
   "enter-your-city-name": "أدخل اسم مدينتك",
-  "create-lead": "إنشاء الرصاص",
-  "town/city-name": "اسم البلدة/المدينة",
+  "create-lead": "إنشاء عميل محتمل",
+  "town/city-name": "اسم الحي/المدينة",
   "name-is-required": "الاسم مطلوب",
   "city-name-is-required": "اسم المدينة مطلوب",
   "success": "نجاح !",
-  "successfully-registered": "تم تسجيل [اسم المطعم] بنجاح",
-  "link": "وصلة",
-  "back-to-home": "العودة إلى المنزل",
+  "successfully-registered": "تم التسجيل بنجاح",
+  "link": "رابط",
+  "back-to-home": "العودة إلى الصفحة الرئيسية",
   "pincode-must-not-contain-spaces": "يجب ألا يحتوي الرمز السري على مسافات",
   "pincode-must-contain-only-digits": "يجب أن يحتوي الرمز السري على أرقام فقط",
   "password-not-contain-spaces": "يجب ألا يحتوي اسم كلمة المرور على مسافات",
   "owner-name-is-required": "اسم المالك مطلوب",
   "email-is-invalid": "البريد الإلكتروني غير صالح",
-  "sign-in": "تسجيل الدخول للبقاء على اتصال.",
+  "sign-in": "تسجيل الدخول",
   "logout": "تسجيل خروج",
-  "good-afternoon": "مساء الخير",
-  "restaurants": "مطاعم",
+  "good-afternoon": "نهارك سعيد",
+  "restaurants": "المطاعم",
   "generated-link": "الرابط الذي تم إنشاؤه",
-  "shop-no-Building-optional": "محل رقم/مبنى (خياري)",
-  "area-street-name-Optional": "اسم المنطقة/الشارع (خياري)",
-  "town-city-name": "اسم البلدة/المدينة",
-  "on-board-and-create-password": "على متن الطائرة وإنشاء كلمة المرور",
+  "shop-no-Building-optional": "رقم المحل /المبنى (إختياري)",
+  "area-street-name-Optional": "اسم المنطقة/الشارع (إختياري)",
+  "town-city-name": "اسم الحي/المدينة",
+  "on-board-and-create-password": "اعداد وإنشاء كلمة المرور",
   "reset-password": "إعادة تعيين كلمة المرور",
   "edit-profile": "تعديل الملف الشخصي",
-  "onBoard-and-Create-Password": "على متن الطائرة وإنشاء كلمة المرور",
+  "onBoard-and-Create-Password": "التأهيل وإنشاء كلمة المرور",
 
   "-------------MENUData--------": "-------------MENUData--------",
   "veg": "نباتي",
   "non-veg": "غير نباتي",
   "bestseller": "الأكثر مبيعًا",
-  "offer": "يعرض",
+  "offer": "عرض",
   "search-a-food" : "بحث عن طعام .....",
 
 
   "-------------SidebarData--------": "-------------SidebarData--------",
-  "dashboard" : "لوحة القيادة",
+  "dashboard" : "لوحة التحكم",
   "managers" : "المديرين",
   "menu-categories": "فئات القائمة",
   "media-files": "ملفات الوسائط",
   "payment-history": "تاريخ الدفع",
-  "leads": "يؤدي"
+  "leads": "عملاء محتملين"
 
   
 }
