--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -245,6 +245,7 @@
   "menu-categories": "Menu Categories",
   "media-files": "Media Files",
   "payment-history": "Payment History",
-  "leads": "Leads"
+  "leads": "Leads",
+  "get-started" : "Get Started"
   
 }
