Updated form for menu item and category.

--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -106,7 +106,7 @@
   "bestseller": "Bestseller",
   "upload-menu": "Upload Menu",
   "add-menu": "Add Menu",
-  "add-categories": "Add Categories",
+  "add-categories": "Add Category",
   "download-sample": "Download Sample",
   "more": "More",
   "edit-category": "Edit Category",
