--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -242,7 +242,9 @@
   "menu-categories": "فئات القائمة",
   "media-files": "ملفات الوسائط",
   "payment-history": "تاريخ الدفع",
-  "leads": "عملاء محتملين"
+  "leads": "عملاء محتملين",
+
+  "confirm-upload" : "الاستبدال ببيانات جديدة: سيتم حذف القائمة الحالية. يتأكد؟"
 
   
 }
