--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -244,7 +244,8 @@
   "payment-history": "تاريخ الدفع",
   "leads": "عملاء محتملين",
 
-  "confirm-upload" : "الاستبدال ببيانات جديدة: سيتم حذف القائمة الحالية. يتأكد؟"
+  "confirm-upload" : "الاستبدال ببيانات جديدة: سيتم حذف القائمة الحالية. يتأكد؟",
+  "save-profile" : "احفظ الملف"
 
   
 }
