Toast error solve.

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -245,7 +245,9 @@
   "leads": "عملاء محتملين",
 
   "confirm-upload" : "الاستبدال ببيانات جديدة: سيتم حذف القائمة الحالية. يتأكد؟",
-  "save-profile" : "احفظ الملف"
+  "save-profile" : "احفظ الملف",
+  "delete-successfully" : "تم الحذف بنجاح"
+
 
   
 }
