arabic fromat change

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -28,6 +28,7 @@
   "upload-images": "تحميل الصور",
   "payment-history": "سجل الدفع",
   "basic": "أساسي",
+  "monthly":"شهريا",
   "year": "سنة",
   "month": "شهر",
   "status": "الحالة",
