Added logo, edit profile, logout button on navbar.

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -64,6 +64,7 @@
   "download-now": "التحميل الان",
   "payment-montly":"شهريا",
   "payment-yearly":"سنوي",
+  "view-profile":"عرض الصفحة الشخصية",
 
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
   "good-afternoon": "نهارك سعيد",
