--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -63,7 +63,7 @@
   "assigned-to": "Assigned to",
   "logout": "Logout",
   "download-now": "Download Now",
-
+"view-profile":"View Profile",
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
 
   "restaurants": "Restaurants",
