working on add varent

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -65,6 +65,7 @@
   "payment-montly":"شهريا",
   "payment-yearly":"سنوي",
   "view-profile":"عرض الصفحة الشخصية",
+  "item-price":"سعر السلعة",
 
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
   "good-afternoon": "نهارك سعيد",
