--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -64,6 +64,7 @@
   "logout": "Logout",
   "download-now": "Download Now",
 "view-profile":"View Profile",
+"item-price":"Item Price",
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
 
   "restaurants": "Restaurants",
