--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -260,7 +260,8 @@
   "email-or-phone-no" : "البريد الإلكتروني أو رقم الهاتف",
   "email-or-phone-number-is-required" : "مطلوب البريد الإلكتروني أو رقم الهاتف",
   "password-must-not-contain-spaces" : "يجب ألا تحتوي كلمة المرور على مسافات",
-  "variants" : "المتغيرات"
+  "variants" : "المتغيرات",
+  "add-variant" : "+ إضافة البديل"
 
 
   
