Added All button in menu and route fix if no token is there.

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -66,6 +66,7 @@
   "payment-yearly":"سنوي",
   "view-profile":"عرض الصفحة الشخصية",
   "item-price":"سعر السلعة",
+  "all" : "الجميع",
 
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
   "good-afternoon": "نهارك سعيد",
