--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -238,6 +238,7 @@
   "reset-password": "Reset Password",
   "edit-profile": "Edit Profile",
   "onBoard-and-Create-Password": "OnBoard and Create Password",
+  "all" : "All",
 
   "-------------MENUData--------": "-------------MENUData--------",
   "veg": "Veg",
