table ui done and staff ui done

--- a/src/i18n/locales/ar-sa/ArabicTranslations.json
+++ b/src/i18n/locales/ar-sa/ArabicTranslations.json
@@ -28,7 +28,7 @@
   "upload-images": "تحميل الصور",
   "payment-history": "سجل الدفع",
   "basic": "أساسي",
-  "monthly":"شهريا",
+  "monthly": "شهريا",
   "year": "سنة",
   "month": "شهر",
   "status": "الحالة",
@@ -39,9 +39,8 @@
   "per-year": "سنويا",
   "per-month": "شهريا",
   "delete": "حذف",
-  "yearly" : "سنوي",
+  "yearly": "سنوي",
   "-------------DashBoardData--------": "-------------DashBoardData--------",
-
   "good-afternoon": "نهارك سعيد",
   "good-morning": "صباح الخير",
   "good-evening": "مساء الخير",
@@ -50,8 +49,7 @@
   "subscription-plan": "خطة الاشتراك",
   "view-details": "عرض التفاصيل",
   "owner": "المالك",
-  "sales":"مبيعات",
-
+  "sales": "مبيعات",
   "basic": "أساسي",
   "start-date": "تاريخ البدء",
   "end-date": "تاريخ الانتهاء",
@@ -62,12 +60,11 @@
   "assigned-to": "تخصيص ل",
   "logout": "تسجيل خروج",
   "download-now": "التحميل الان",
-  "payment-montly":"شهريا",
-  "payment-yearly":"سنوي",
-  "view-profile":"عرض الصفحة الشخصية",
-  "item-price":"سعر السلعة",
-  "all" : "الجميع",
-
+  "payment-montly": "شهريا",
+  "payment-yearly": "سنوي",
+  "view-profile": "عرض الصفحة الشخصية",
+  "item-price": "سعر السلعة",
+  "all": "الجميع",
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
   "good-afternoon": "نهارك سعيد",
   "restaurants": "المطاعم",
@@ -103,9 +100,7 @@
   "pincode-is-required": "مطلوب الرمز السري",
   "state-is-required": "الولاية مطلوبة",
   "country-is-required": "الدولة مطلوبة",
-
   "-------------CategoriesData--------": "-------------CategoriesData--------",
-
   "items": "اصناف",
   "menu-categories": "فئات القائمة",
   "edit": "تحرير",
@@ -152,13 +147,10 @@
   "type-here": "أكتب هنا",
   "add-category": "إضافة فئة",
   "please-enter-item-type": "الرجاء إدخال نوع الصنف",
-
   "explore-our-pricing-plans": "استكشف خطط التسعير لدينا",
   "per": "لكل",
   "get-started": "البدء",
-
   "-------------LeadsData--------": "-------------LeadsData--------",
-
   "leads": "عملاء محتملين",
   "restaurant-name": "مطعم اسم",
   "name": "اسم",
@@ -235,43 +227,62 @@
   "reset-password": "إعادة تعيين كلمة المرور",
   "edit-profile": "تعديل الملف الشخصي",
   "onBoard-and-Create-Password": "التأهيل وإنشاء كلمة المرور",
-
   "-------------MENUData--------": "-------------MENUData--------",
   "veg": "نباتي",
   "non-veg": "غير نباتي",
   "bestseller": "الأكثر مبيعًا",
   "offer": "عرض",
-  "search-a-food" : "بحث عن طعام .....",
-
-
+  "search-a-food": "بحث عن طعام .....",
   "-------------SidebarData--------": "-------------SidebarData--------",
-  "dashboard" : "لوحة التحكم",
-  "managers" : "المديرين",
+  "dashboard": "لوحة التحكم",
+  "managers": "المديرين",
   "menu-categories": "فئات القائمة",
   "media-files": "ملفات الوسائط",
   "payment-history": "تاريخ الدفع",
   "leads": "عملاء محتملين",
+  "confirm-upload": "الاستبدال ببيانات جديدة: سيتم حذف القائمة الحالية. يتأكد؟",
+  "save-profile": "احفظ الملف",
+  "delete-successfully": "تم الحذف بنجاح",
+  "please-enter-your-number": "الرجاء إدخال رقمك",
+  "sign-in-login": "تسجيل الدخول",
+  "sign-in-to-stay-connected": "تسجيل الدخول للبقاء على اتصال.",
+  "email-or-phone-no": "البريد الإلكتروني أو رقم الهاتف",
+  "email-or-phone-number-is-required": "مطلوب البريد الإلكتروني أو رقم الهاتف",
+  "password-must-not-contain-spaces": "يجب ألا تحتوي كلمة المرور على مسافات",
+  "variants": "المتغيرات",
+  "add-variant": "+ إضافة البديل",
+  "deleted-successfully": "حذف بنجاح",
+  "internal-server-error": "خطأ في الخادم الداخلي",
+  "slug-must-not-contain-spaces": "يجب ألا تحتوي سبيكة على مسافات",
+  "url-slug": "سبيكة URL",
+  "please-enter-unique-slug": "الرجاء إدخال سبيكة فريدة من نوعها",
+  "--------------------manage order ------------": "============Manager Order =====================",
+  "manage-orders": "إدارة الطلبات",
+  "table-number": "رقم الطاولة",
+  "add-new-table": "إضافة جدول جديد",
+  "enter-category-name": "أدخل اسم الفئة",
+  "enter-capacity": "أدخل القدرة",
+  "enter-table-no": "أدخل رقم الجدول",
+  "capacity": "سعة",
+  "no-of-persons": "عدد الأشخاص",
+  "add-table": "إضافة جدول",
+  "blank-table": "جدول فارغ",
+  "disabled-table":"جدول معطل",
+  "running-table": "جدول الجري",
+  "running-KOT-table": "تشغيل جدول KOT",
+  "disabled":"عاجز",
+  "edit-table":"تحرير الجدول",
+  "non-ac":"غير مكيف",
+  "ac":"تيار متردد  ",
+  "family":"عائلة",
+  "outdoor":"في الخارج",
+  "add-new-member":"إضافة عضو جديد",
+  "staff-members":"طاقم العمل",
+  "add-member":"إضافة عضو",
+  "designation":"تعيين",
+  "download-QR":"تحميل QR"
 
-  "confirm-upload" : "الاستبدال ببيانات جديدة: سيتم حذف القائمة الحالية. يتأكد؟",
-  "save-profile" : "احفظ الملف",
-  "delete-successfully" : "تم الحذف بنجاح",
-  "please-enter-your-number" : "الرجاء إدخال رقمك",
-  "sign-in-login" : "تسجيل الدخول",
-  "sign-in-to-stay-connected" : "تسجيل الدخول للبقاء على اتصال.",
-  "email-or-phone-no" : "البريد الإلكتروني أو رقم الهاتف",
-  "email-or-phone-number-is-required" : "مطلوب البريد الإلكتروني أو رقم الهاتف",
-  "password-must-not-contain-spaces" : "يجب ألا تحتوي كلمة المرور على مسافات",
-  "variants" : "المتغيرات",
-  "add-variant" : "+ إضافة البديل",
-  "deleted-successfully" : "حذف بنجاح",
-  "internal-server-error" : "خطأ في الخادم الداخلي",
 
-  "slug-must-not-contain-spaces" : "يجب ألا تحتوي سبيكة على مسافات",
-  "url-slug" : "سبيكة URL",
-  "please-enter-unique-slug" : "الرجاء إدخال سبيكة فريدة من نوعها",
 
-  "--------------------manage order ------------" : "============Manager Order =====================",
-  "manage-orders" : "إدارة الطلبات"
 
-  
 }
