--- a/src/i18n/locales/en/EnglishTranslations.json
+++ b/src/i18n/locales/en/EnglishTranslations.json
@@ -1,6 +1,5 @@
 {
   "sign-in": "Sign in to stay connected.",
-
   "-------------ManagerData--------": "-------------ManagerData--------",
   "managers": "Managers",
   "add-manager": "Add Manager",
@@ -23,14 +22,13 @@
   "confirm-password-is-required": "Confirm Password is required",
   "delete-manager": "Do you want to Delete this Manager?",
   "confirm-delete-button": "Yes, I’m Sure",
-
   "-------------MediaData--------": "-------------MediaData--------",
   "all-media": "All Media",
   "upload-images": "Upload Images",
   "payment-history": "Payment History",
   "basic": "Basic",
-  "yearly":"Yearly",
-  "monthly":"Monthly",
+  "yearly": "Yearly",
+  "monthly": "Monthly",
   "year": "Year",
   "month": "Month",
   "status": "Status",
@@ -41,9 +39,7 @@
   "action": "Action",
   "per-year": "Per Year",
   "per-month": "Per Month",
-
   "-------------DashBoardData--------": "-------------DashBoardData--------",
-
   "good-afternoon": "Good Afternoon",
   "good-morning": "Good Morning",
   "good-evening": "Good Evening",
@@ -52,7 +48,7 @@
   "subscription-plan": "Subscription Plan",
   "view-details": "View Details",
   "owner": "owner",
-  "sales":"sales",
+  "sales": "sales",
   "basic": "Basic",
   "start-date": "Start Date",
   "end-date": "End Date",
@@ -63,10 +59,9 @@
   "assigned-to": "Assigned to",
   "logout": "Logout",
   "download-now": "Download Now",
-"view-profile":"View Profile",
-"item-price":"Item Price",
+  "view-profile": "View Profile",
+  "item-price": "Item Price",
   "-------------RestaurantsLeadData--------": "-------------RestaurantsLeadData--------",
-
   "restaurants": "Restaurants",
   "restaurant-name": "Restaurants",
   "name": "Name",
@@ -99,9 +94,7 @@
   "pincode-is-required": "Pincode is required",
   "state-is-required": "state is required",
   "country-is-required": "country is required",
-
   "-------------CategoriesData--------": "-------------CategoriesData--------",
-
   "items": "Items",
   "menu-categories": "Menu Categories",
   "edit": "Edit",
@@ -150,13 +143,10 @@
   "please-enter-item-type": "Please Enter Item Type",
   "please-enter-currency": "Please Enter Currency",
   "add-category": "Add Category",
-
   "explore-our-pricing-plans": "Explore Our Pricing Plans",
   "sar": "SAR",
   "per": "per",
-
   "-------------LeadsData--------": "-------------LeadsData--------",
-
   "leads": "Leads",
   "restaurant-name": "Restaurant Name",
   "name": "Name",
@@ -220,10 +210,8 @@
   "password-not-contain-spaces": "Password name must not contain spaces",
   "owner-name-is-required": "owner name is required",
   "email-is-invalid": "Email is Invalid",
-
-  "payment-montly":"month",
-  "payment-yearly":"year",
-  
+  "payment-montly": "month",
+  "payment-yearly": "year",
   "logout": "Logout",
   "good-afternoon": "Good afternoon",
   "restaurants": "Restaurants",
@@ -238,15 +226,13 @@
   "reset-password": "Reset Password",
   "edit-profile": "Edit Profile",
   "onBoard-and-Create-Password": "OnBoard and Create Password",
-  "all" : "All",
-
+  "all": "All",
   "-------------MENUData--------": "-------------MENUData--------",
   "veg": "Veg",
   "non-veg": "Non-Veg",
   "bestseller": "Bestseller",
   "offer": "Offer",
   "search-a-food": "Search a food.....",
-
   "-------------SidebarData--------": "-------------SidebarData--------",
   "dashboard": "Dashboard",
   "managers": "Managers",
@@ -254,31 +240,47 @@
   "media-files": "Media Files",
   "payment-history": "Payment History",
   "leads": "Leads",
-  "get-started" : "Get Started",
-  "confirm-upload" : "Replacing with new data: Existing menu will be deleted. Confirm?",
-  "save-profile" : "Save Profile",
-  "delete-successfully" : "Delete Successfully",
-  "please-enter-your-number" : "Please Enter Your Number",
-  "sign-in-login" : "Sign In",
-  "sign-in-to-stay-connected" : "Sign in to stay connected.",
-  "email-or-phone-no" : "Email or Phone No",
-  "email-or-phone-number-is-required" : "Email or phone number is required",
-  "password-must-not-contain-spaces" : "Password must not contain spaces",
-  "description-is-required" : "Description is Required",
-  "variants" : "Variants",
-  "add-variant" : "+ Add Variant",
-  "deleted-successfully" : "Deleted Successfully",
-  "internal-server-error" : "Internal Server Error",
-
-  "slug-must-not-contain-spaces" : "Slug must not contain spaces",
-  "url-slug" : "URL Slug",
-  "please-enter-unique-slug" : "Please Enter Unique Slug",
-
-  "--------------------manage order ------------" : "============Manager Order =====================",
-  "manage-orders" : "Manage Orders"
-
-  
-
-
-  
+  "get-started": "Get Started",
+  "confirm-upload": "Replacing with new data: Existing menu will be deleted. Confirm?",
+  "save-profile": "Save Profile",
+  "delete-successfully": "Delete Successfully",
+  "please-enter-your-number": "Please Enter Your Number",
+  "sign-in-login": "Sign In",
+  "sign-in-to-stay-connected": "Sign in to stay connected.",
+  "email-or-phone-no": "Email or Phone No",
+  "email-or-phone-number-is-required": "Email or phone number is required",
+  "password-must-not-contain-spaces": "Password must not contain spaces",
+  "description-is-required": "Description is Required",
+  "variants": "Variants",
+  "add-variant": "+ Add Variant",
+  "deleted-successfully": "Deleted Successfully",
+  "internal-server-error": "Internal Server Error",
+  "slug-must-not-contain-spaces": "Slug must not contain spaces",
+  "url-slug": "URL Slug",
+  "please-enter-unique-slug": "Please Enter Unique Slug",
+  "--------------------manage order ------------": "============Manager Order =====================",
+  "manage-orders": "Manage Orders",
+  "table-number": "Table Number",
+  "add-new-table": "Add New Table",
+  "enter-category-name": "Enter Category Name",
+  "enter-capacity": "Enter Capacity",
+  "enter-table-no": "Enter Table No",
+  "capacity": "Capacity",
+  "no-of-persons": "No. of Persons",
+  "add-table": "Add Table",
+  "disabled-table":"Disabled table",
+  "disabled":"Disabled",
+  "blank-table": "Blank Table",
+  "running-table": "Running Table",
+  "running-KOT-table": "Running KOT Table",
+  "edit-table":"Edit Table",
+  "non-ac":"Non-Ac",
+  "ac":"AC",
+  "family":"Family",
+  "outdoor":"Outdoor",
+  "add-new-member":"Add New Member",
+  "staff-members":"Staff Members",
+  "add-member":"Add Member",
+  "designation":"Designation",
+  "download-QR":"Download QR"
 }
